<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/drawer_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/doctoriniciofragment"
            android:contentDescription="@string/Inicio"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Inicio"
            app:showAsAction="never" />
        <item
            android:id="@+id/revisarcitasFragment"
            android:contentDescription="@string/revisar_citas"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/revisar_citas"
            app:showAsAction="never" />
    </group>

    <item android:title="@string/opciones">
        <menu>
            <item
                android:id="@+id/repositorioAccess"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/verRepositorio" />
            <item
                android:id="@+id/cerrarSesion"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/cerrarSesion" />
            <item
                android:id="@+id/acercaDe"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/acerca_de" />
        </menu>
    </item>
</menu>