<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pelis_nav_graph"
    app:startDestination="@id/topratedfragment">
    <fragment
        android:id="@+id/topratedfragment"
        android:name="com.example.recyclerview.ui.peliculasactivity.fragments.toprated.TopRatedFragment"
        android:label="@string/top_rated"
        tools:layout="@layout/fragment_top_rated"></fragment>
    <fragment
        android:id="@+id/trendingfragment"
        android:name="com.example.recyclerview.ui.peliculasactivity.fragments.trending.TrendingFragment"
        android:label="@string/trending"
        tools:layout="@layout/fragment_trending"></fragment>
    <fragment
        android:id="@+id/detallefragment"
        android:name="com.example.recyclerview.ui.peliculasactivity.fragments.detalle.DetalleFragment"
        android:label="@string/detalle"
        tools:layout="@layout/fragment_detalle"></fragment>
    <action
        android:id="@+id/action_global_topratedfragment"
        app:destination="@id/topratedfragment" />
    <action
        android:id="@+id/action_global_trendingfragment"
        app:destination="@id/trendingfragment" />
</navigation>