<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/indigo">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_violet"
            android:padding="5dp">

            <TextView
                android:id="@+id/textoNombrePelicula"
                android:layout_width="216dp"
                android:layout_height="25dp"
                android:layout_margin="8dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="12dp"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.875"
                app:layout_constraintStart_toEndOf="@+id/posterPelicula"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fechaEstreno"
                android:layout_width="142dp"
                android:layout_height="22dp"
                android:layout_margin="8dp"
                android:layout_marginEnd="48dp"
                android:textSize="16sp"
                android:text="@string/fecha_estreno"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.569"
                app:layout_constraintStart_toEndOf="@+id/posterPelicula"
                app:layout_constraintTop_toBottomOf="@+id/textoNombrePelicula"
                app:layout_constraintVertical_bias="0.282" />

            <TextView
                android:id="@+id/textorating"
                android:layout_width="147dp"
                android:layout_height="26dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/rating"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toEndOf="@+id/posterPelicula"
                app:layout_constraintTop_toBottomOf="@+id/fechaEstreno"
                app:layout_constraintVertical_bias="0.666" />

            <ImageView
                android:id="@+id/posterPelicula"
                android:layout_width="96dp"
                android:layout_height="189dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/imagen"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>